Running audits without errors but without tests either.